--- a/Java/index.html
+++ b/Java/index.html
@@ -16,9 +16,13 @@
         const number1 = parseInt(prompt('Wprowadź pierwszą liczbę:'))
         const number2 = Number(prompt('Wprowadź drugą liczbę:'))
 
-        if()
-
-        document.write('<p>wynik: '+ (number1 + number2)+'</p>');
+        if(isNaN(number1)){
+            document.write('Wpisz poprawnie pierwszą liczbę');
+        } else if(isNaN(number2)){
+            document.write('Wpisz poprawnie drugą liczbę');
+        } else if(isNaN(number2)){
+            document.write('<p>wynik: '+ (number1 + number2)+'</p>');
+        }
     </script>
 </body> 
 </html>
