--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             document.write('Wpisz poprawnie pierwszą liczbę');
         } else if(isNaN(number2)){
             document.write('Wpisz poprawnie drugą liczbę');
-        } else if(isNaN(number2)){
+        } else (isNaN(number2)){
             document.write('<p>wynik: '+ (number1 + number2)+'</p>');
         }
     </script>
