--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
         const number1 = parseInt(prompt('Wprowadź pierwszą liczbę:'))
         const number2 = Number(prompt('Wprowadź drugą liczbę:'))
 
-        if(isNaN(number1)){
+        if(isNaN(number1))
+        {
             document.write('Wpisz poprawnie pierwszą liczbę');
-        } else if(isNaN(number2)){
+        } 
+        else if(isNaN(number2))
+        {
             document.write('Wpisz poprawnie drugą liczbę');
-        } else (isNaN(number2)){
+        } 
+        else (isNaN(number2))
+        {
             document.write('<p>wynik: '+ (number1 + number2)+'</p>');
         }
     </script>
