--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         document.write('Hello World!');
 
         const number1 = parseInt(prompt('Wprowadź pierwszą liczbę:'))
-        const number2 = Number(prompt('Wprowadź drugą liczbę:'))
+        const number2 = parseInt(prompt('Wprowadź drugą liczbę:'))
 
         if(isNaN(number1))
         {
