--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         else if(isNaN(number2)) {
             document.write('Wpisz poprawnie drugą liczbę');
         } 
-        else (isNaN(number2))
-        {
+        else {
             document.write('<p>wynik: '+ (number1 + number2)+'</p>');
         }
     </script>
